--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,38 @@
+# =========================
+# Node.js
+# =========================
 node_modules/
-.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+# =========================
+# Build / Output folders
+# =========================
 dist/
+build/
+.env
+
+# =========================
+# VS Code / IDE settings
+# =========================
+.vscode/
+.idea/
+.DS_Store
+
+# =========================
+# Logs
+# =========================
 logs/
 *.log
-uploads/
 
+# =========================
+# Frontend (React / Create React App)
+# =========================
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+coverage/
