--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "seed:admin": "node src/seedAdmin.js"
   },
   "keywords": [],
   "author": "",
