--- a/Roshara-Frontend/package.json
+++ b/Roshara-Frontend/package.json
@@ -13,6 +13,7 @@
     "lucide": "^0.545.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
